...
  private func showNextQuestionOrResults() {
    if isLastQuestion() {
      statisticService.store(
        correct: correctAnswers, total: questionsAmount)

      let result = QuizResultsViewModel(
        title: "Этот раунд окончен!",
        text: """
          Ваш результат: \(correctAnswers)/\(questionsAmount)
          Количество сыгранных квизов: \(statisticService.gamesCount)
          Рекорд: \(statisticService.bestGame.correct)/\(statisticService.bestGame.total) (\(statisticService.bestGame.date.dateTimeString))
          Средняя точность: \(String(format: "%.2f", statisticService.totalAccuracy))%
          """,
...
